# VirtualSlides

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
app/: CMakeLists.txt
app/Resources/: res.qrc
app/src/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  DiskImageManager.cpp  DiskImageManager.hpp  GuestBridge.cpp  GuestBridge.hpp  Network.cpp  Network.hpp  NetworkManager.cpp  NetworkManager.hpp  Presentation.cpp  Presentation.hpp  PresentationWindow.cpp  PresentationWindow.hpp  SockStdioConnector.cpp  SockStdioConnector.hpp  UnixSocket.cpp  UnixSocket.hpp  UnixSocketServer.cpp  UnixSocketServer.hpp  VSock.cpp  VSock.hpp  VSockServer.cpp  VSockServer.hpp  VSockUser.cpp  VSockUser.hpp  VSockUserServer.cpp  VSockUserServer.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachineManager.cpp  VirtualMachineManager.hpp  VirtualMachineWidget.cpp  VirtualMachineWidget.hpp  VmTaskList.cpp  VmTaskList.hpp  main.cpp
app/tests/: CMakeLists.txt  tst_unixsock.cpp  tst_vsock.cpp  tst_vsockuser.cpp
docs/: Internal net diagram.drawio
examples/: Config.json  Config.jsonc
guest/: init.c  make_image.sh
guest/Dockerfiles/: alpine.Dockerfile  debian-12.Dockerfile  debian.Dockerfile  router.Dockerfile
guest/Dockerfiles/alpine/: Dockerfile
guest/Dockerfiles/alpine/etc/: inittab
guest/Dockerfiles/alpine/etc/network/: interfaces
guest/Dockerfiles/debian-12/: Dockerfile
guest/Dockerfiles/debian-12/etc/: hostname
guest/Dockerfiles/debian-12/etc/systemd/system/serial-getty@ttyS0.service.d/: autologin.conf
guest/Dockerfiles/router/: Dockerfile
guest/Dockerfiles/router/etc/iptables/: rules.v4
guest/Dockerfiles/router/etc/kea/: kea-dhcp4.conf
guest/Dockerfiles/router/etc/network/: interfaces
guest/Dockerfiles/router/etc/systemd/system/: iptables-legacy-restore.service  iptables-restore.service
guest/Dockerfiles/router/etc/systemd/system/serial-getty@ttyS0.service.d/: autologin.conf
guest/init/: Cargo.toml
guest/init/src/: host_bridge.rs  lib.rs  machine_manager.rs  main.rs  vs_init.rs  vs_run.rs
guest/init/src/host_bridge/: host_bridge_imp.rs  host_bridge_impl.rs  init_script.rs  install_file.rs  legacy_host_bridge_impl.rs  mod.rs  task.rs
guest/init/src/info/: machine.rs  mod.rs
guest/kernel/: build_kernel.sh  defconfig  exec.patch
qemu/: CMakeLists.txt  virtio-vsock.c  virtio-vsock.h  virtual-slides-config-devices.mak
