[package]
name = "vs-guest-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vs_run"
path = "src/vs_run.rs"

[[bin]]
name = "vs_init"
path = "src/vs_init.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.29", features = ["reboot", "fs", "hostname", "mount"] }
anyhow = "1.0"
indicatif = "0.17"
vsock = "0.5"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
which = "6.0"
regex = "1.10"
path-absolutize = "3.1"